# Image2PDF-OnDevice

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vite.config.ts
src/: app-controller.ts  main.ts
src/state/: machine.ts
src/styles/: app.css
src/ui/: app-view.ts  index.ts
src/wasm/pkg/: image2pdf_wasm.d.ts  image2pdf_wasm.js  image2pdf_wasm_bg.wasm  image2pdf_wasm_bg.wasm.d.ts  package.json
src/worker/: conversion.worker.ts  error-message.ts  protocol.ts
tests/: playwright.config.ts
tests/e2e/: conversion.spec.ts
tests/fixtures/: image-fixtures.ts
tests/unit/: app-view.test.ts  state-machine.test.ts  static-hosting.test.ts  worker-error.test.ts
wasm/image-core/: Cargo.toml  README.md
wasm/image-core/src/: lib.rs
