[package]
name = "image2pdf-image-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Browser-safe image normalization for Image2PDF"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "=0.25.5", default-features = false, features = [
  "bmp",
  "gif",
  "jpeg",
  "png",
  "tiff",
  "webp",
] }
js-sys = "=0.3.77"
kamadak-exif = "0.6.1"
wasm-bindgen = "=0.2.100"

[dev-dependencies]
image = { version = "=0.25.5", default-features = false, features = ["jpeg", "png"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
